--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Central de Downloads - Gustavo</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f7f7f7;
+      text-align: center;
+      padding-top: 50px;
+    }
+    h1 {
+      color: #333;
+    }
+    .botao {
+      margin: 20px;
+    }
+    button {
+      background-color: #1a73e8;
+      color: white;
+      padding: 15px 30px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0c50a1;
+    }
+  </style>
+</head>
+<body>
+  <h1>Central de Arquivos Gerados por IA</h1>
+  <p>Aqui você poderá baixar vídeos, áudios e imagens com apenas um clique.</p>
 
+  <div class="botao">
+    <a href="LINK_DO_VIDEO.mp4" download>
+      <button>Baixar Vídeo IA</button>
+    </a>
+  </div>
+
+  <div class="botao">
+    <a href="LINK_DO_AUDIO.mp3" download>
+      <button>Baixar Áudio IA</button>
+    </a>
+  </div>
+
+  <div class="botao">
+    <a href="LINK_DA_IMAGEM.png" download>
+      <button>Baixar Imagem IA</button>
+    </a>
+  </div>
+</body>
+</html>
